# gifbar

./: .betterleaks.toml  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .goreleaser.yml  .snyk  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bundlesize.config.json  gifBox.js  gifItem.js  gifList.js  index.html  index.js  licence.md  linuxBuildConfig.json  main.js  package-lock.json  package.json  release-please-config.json  release.php  release.sh  spinner.js  style.css  vite.config.js  vitest.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request---enhancement.md
.github/workflows/: auto-tag.yml  betterleaks.yml  ci.yml  release.yml
.parcel-cache/: 06500c7909fc66a4  99dbcbb8f1cb063e.txt  data.mdb  ea7657b6f654e247  lock.mdb
__mocks__/: dataMocks.js
components/: gifBox.js  gifBox.jsx  gifBox.test.js  gifItem.js  gifItem.jsx  gifItem.test.js  gifList.js  gifList.jsx  gifList.test.js  spinner.js  spinner.jsx  spinner.test.js
lib/GifProvider/: GifProvider.js  GifProvider.test.js  GifProviderFactory.js  GifProviderFactory.test.js  GifProviderWrapper.js  GifProviderWrapper.test.js
lib/GifProvider/providers/: index.js  (+1 more)
public/: index.html
src/: App.svelte  app.css  main.test.js  test-setup.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: GifGrid.svelte  GifGrid.test.js  SearchBar.svelte  SearchBar.test.js  Spinner.svelte  Spinner.test.js  gif-api.js  gif-api.test.js
tools/: customHooks.js
