[package]
name = "gifbar"
version = "2.0.0"
description = "A menu bar app for searching, copying and sharing GIFs"
authors = ["Josh Ghent"]
license = "MIT"
edition = "2021"

[lib]
name = "gifbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
